--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ a:hover {
 .logo {
     font-size: 24px;
     letter-spacing: 2px;
+    color: rgba(62, 63, 67, 1);
 }
 
 .logoMain a {
@@ -310,4 +311,293 @@ hr {
     font-size: 24px;
     text-align: center;
     font-weight: bold;
+}
+
+.fourthSection {
+    grid-column: 2/3;
+}
+
+.limit3 {
+    width: 37%;
+}
+
+.categoriesContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 3em;
+}
+
+.categoriesItem {
+    width: 300px;
+    height: 420px;
+    border-radius: 0 35% 0 35%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.itemPinkBackground {
+    background: rgba(249, 189, 189, 1);
+}
+
+.itemOrangeBackground {
+    background: rgba(247, 222, 166, 1);
+}
+
+.itemBlueBackground {
+    background: rgba(168, 220, 236, 1);
+}
+
+.categoriesTitle {
+    color: rgba(62, 63, 67, 1);
+    font-size: 24px;
+    font-weight: bold;
+    padding: 15px;
+}
+
+.categoriesButton {
+    border: 1px solid rgba(62, 63, 67, 1);
+    padding: 7px;
+    width: 110px;
+    background: none;
+    border-radius: 4px;
+    align-self: end;
+    margin-right: 20px;
+    font-weight: bold;
+}
+
+.categoriesButton:hover {
+    color: white;
+    border: 1px solid white;
+}
+
+.categoriesImg {
+    width: 270px;
+    height: 260px;
+}
+
+.categoriesImg2 {
+    width: 180px;
+    height: 260px;
+    align-self: center;
+}
+
+.categoriesImg3 {
+    width: 180px;
+    height: 240px;
+    align-self: center;
+}
+
+.categoriesImg4 {
+    width: 160px;
+    height: 260px;
+    align-self: center;
+}
+
+.categoriesImg5 {
+    width: 250px;
+    height: 150px;
+    align-self: center;
+    justify-self: center;
+    margin-top: 50px;
+    margin-bottom: 60px;
+}
+
+.fifthSection {
+    grid-column: 2/3;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.fifthSectionContainer {
+    display: flex;
+    gap: 100px;
+}
+
+.interiorDesignImg {
+    display: flex;
+    gap: 100px;
+}
+
+.interiorImg {
+    border-radius: 35% 0 35% 0;
+    width: 320px;
+    height: 400px;
+}
+
+.star {
+    color: rgba(255, 193, 7, 1);
+    width: 24px;
+    height: 24px;
+}
+
+.stars {
+    display: flex;
+    padding: 10px 10px 10px 0;
+}
+
+.review {
+    border: 1px solid rgba(168, 220, 236, 1);
+    border-radius: 0 30% 0 30%;
+    width: 70%;
+    height: 90%;
+    padding: 10px 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+}
+
+.reviewText {
+    padding-right: 10px;
+}
+
+.avatar {
+    border-radius: 50%;
+    box-shadow: 3px 3px 3px rgba(78, 96, 255, 0.16);
+    width: 40px;
+    height: 40px;
+}
+
+.userName {
+    display: flex;
+    flex-direction: column;
+}
+
+.userName span {
+    color: rgba(175, 175, 175, 1);
+    font-size: 14px;
+}
+
+.user {
+    display: flex;
+    gap: 8px;
+    margin: 10px;
+}
+
+.navigation {
+    display: flex;
+    gap: 220px;
+    margin-top: 20px;
+}
+
+.navigate {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.dots {
+    margin-left: 210px;
+}
+
+.contacts {
+    grid-column: 2/3;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 20px;
+    margin-top: 160px;
+    margin-bottom: 100px;
+}
+
+.subscribe {
+    background: rgba(218, 165, 32, 1);
+    color: white;
+    width: 120px;
+    height: 40px;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    font-size: 16px;
+    margin: 0;
+}
+
+.subscribe:hover {
+    background: rgba(200, 150, 30, 1);
+}
+
+.contactInput {
+    border: solid 1px rgba(218, 165, 32, 1);
+    border-radius: 5px 0 0 5px;
+    margin: 0;
+    width: 370px;
+    height: 40px;
+    padding-left: 8px;
+    font-size: 16px;
+}
+
+.contactUs {
+    display: flex;
+    gap: 0;
+}
+
+.contactsText {
+    width: 500px;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    color: black;
+}
+
+footer {
+    grid-column: 1/-1;
+    background: rgb(239, 239, 239);
+    background: linear-gradient(158deg, rgba(239, 239, 239, 1) 2%, rgba(236, 236, 236, 0.8102591378348214) 97%);
+    display: flex;
+}
+
+div hr {
+    border: 0.5px solid rgba(196, 196, 196, 1);
+    background: rgba(196, 196, 196, 1);
+    width: 95%;
+}
+
+.footerRight {
+    width: 70%;
+    margin-left: 6%;
+    display: grid;
+}
+
+.footerImg {
+    align-self: end;
+}
+
+.footerLogo {
+    display: flex;
+    justify-items: center;
+}
+
+.footerContactsContainer {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.footerBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 25px;
+    letter-spacing: 1px;
+}
+
+.footerBlock span {
+    color: rgba(141, 141, 141, 1);
+}
+
+.footerBlock span:nth-child(1) {
+    color: rgba(62, 63, 67, 1);
+}
+
+.contactHeader {
+    color: rgba(62, 63, 67, 1);
+}
+
+.footerLogo span {
+    color: rgba(62, 63, 67, 1);
+}
+
+.footerBottomText {
+    width: 200px;
+    justify-self: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
